Migration from webview_flutter to flutter_inappwebview

--- a/example/web/index.html
+++ b/example/web/index.html
@@ -33,6 +33,8 @@
     crossorigin="anonymous"></script>
   <script src="assets/packages/aad_oauth/assets/msalv2.js"></script>
   <link rel="manifest" href="manifest.json">
+  <script type="application/javascript" src="/assets/packages/flutter_inappwebview_web/assets/web/web_support.js"
+    defer></script>
 </head>
 
 <body>
